objects/Commission__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>IF(ISPICKVAL( Opportunity__r.O_M_Payment__c ,&apos;Upfront&apos;), (Percent__c *   Opportunity__r.Total_Project_Contract_Value__c),(Percent__c * Opportunity__r.Final_Contract_Price__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of the commission: Contract Price * Commission Percent</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Commission was created when contract signed button was pushed. Used only for Commission type records</inlineHelpText>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Affiliate Contact receiving commission on the contract</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earned_Commission__c</fullName>
        <formula>Opportunity__r.Total_Project_Contract_Value__c  * Opportunity__r.Percent_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earned Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost_Amount__c</fullName>
        <description>Commission&apos;s Fixed Cost Amount (manually entered)</description>
        <inlineHelpText>Please enter the Commission&apos;s Fixed Cost Amount in this field</inlineHelpText>
        <label>Fixed Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For indicating a Fixed-Cost Commission.
Please add the Amount manually in the &apos;Fixed Cost Amount&apos; field.</description>
        <inlineHelpText>For indicating a Fixed-Cost Commission.
Please add the Amount manually in the &apos;Fixed Cost Amount&apos; field.</inlineHelpText>
        <label>Fixed Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Percent__c</fullName>
        <formula>Percent__c  * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity1</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissions (Opportunity)</relationshipLabel>
        <relationshipName>Commissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>Opportunity the commission is related to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunityy__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunityy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Sales Credit formula will use Percent of Sale Override field rather than Percent of Sale field.</description>
        <inlineHelpText>Available to Sales Managers only- If checked, Sales Credit formula will use Percent of Sale Override field rather than Percent of Sale field.</inlineHelpText>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <inlineHelpText>Percent of Commission- required at creation</inlineHelpText>
        <label>Percent</label>
        <precision>9</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Sale_Override__c</fullName>
        <inlineHelpText>Available to Sales Managers only- allows for overriding the Percent of Sale amount</inlineHelpText>
        <label>Percent of Sale Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Sale__c</fullName>
        <formula>Number_Percent__c  / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to calculate the percentage of the sale allocated to the user- for Sales Management reports</inlineHelpText>
        <label>Percent of Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Credit__c</fullName>
        <formula>IF( Override__c , Percent_of_Sale_Override__c * Opportunity__r.Final_Contract_Price__c, Percent_of_Sale__c * Opportunity__r.Total_Project_Contract_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percent of Sale * Contract Price</inlineHelpText>
        <label>Sales Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User who is receiving the commission- required at creation</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commission</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <recordTypes>
        <fullName>Affiliates</fullName>
        <active>true</active>
        <label>Affiliates</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <label>Employee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Adding_Self</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Automated__c = false, User__c = $User.Id)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>You cannot create a commission for which you are the user.</errorMessage>
    </validationRules>
</CustomObject>